Add admin management functionality: Implement admin registration, update, and deletion endpoints in AdminController. Introduce AdminRequestDTO and AdminUpdateDTO for handling admin data. Enhance AdminService with methods for creating, updating, and deleting admins, and update AdminRepository with necessary queries.